# true

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCHMARK_PLAN.md  CLAUDE.md  Makefile  README.md  RUNBOOK.md  SPEC.md  STATUS.md  acp.json  plan.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  (+14 more)
benchmark-configs/: baseline.json  baseline.yaml  compare.json  controller_subset.yaml  curated_subset.json  curated_subset.yaml  demo_subset.yaml  expanded_subset.yaml  live_codex.yaml  live_codex_subset.yaml  poc_live_codex.yaml  treatment.json  treatment.yaml
docs/: ACP_VALIDATION.md  ARCHITECTURE.md  BENCHMARK_PLAN.md  CLOSEOUT_CHECKLIST.md  CLOSEOUT_COMMAND_SHEET.md  DELIVERY_STATUS.md  DEMO.md  DEMO_SCRIPT.md  MANUAL_CLOSEOUT_PACK.md  OPENAI_VALIDATION.md  PITCH.md  RUNBOOK.md  SPEC.md  STATUS.md  SUBMISSION.md  TEAM.md  VALIDATION_MATRIX.md
fixtures/: scoring_weights_example.yaml
jetbrains-plugin/: README.md  openapi-snapshot.json  sidecar-config.json
plugin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
prompts/: coder.md  planner.md  reviewer.md  shared_rules.md  verifier_auditor.md
reports/: README.md  gearbox_speedup.json
scripts/: _benchmark_common.py  bench_gearbox_parallel.py  compare_suite_reports.py  export_demo_bundle.py  gen_test_scaffold.py  llm_pr_reviewer.py  llm_resolve_conflicts.py  push-via-pr.sh  record_demo_checklist.sh  refresh_examples.py  regression_detector.py  remediate_dispatcher.py  remediate_mirror.py  render_proof_card.py  run_baseline.py  run_baseline.sh  run_compare.py  run_compare.sh  run_controller_compare.py  run_controller_compare.sh  run_expanded_compare.sh  run_fixture_suite.py  run_live_codex.sh  run_live_compare.sh  run_poc_compare.sh  run_treatment.py  run_treatment.sh  smoke_acp.sh  smoke_crosshair.sh  smoke_openai.py  stream_to_supabase.py
tests/: test_agent.py  test_agent_parsing.py  test_api_routes_http.py  test_api_streams.py  test_api_supabase_writer.py  test_benchmark_compare.py  test_cli.py  test_cli_json_output.py  test_codex_exec_adapter.py  test_contracts.py  test_controller_compare.py  test_detector.py  test_dynamic_intake.py  test_example_artifacts.py  test_examples_refresh.py  test_explorer_role.py  test_gearbox_controller.py  test_gemini_exec_adapter.py  test_ledger.py  test_live_codex_benchmark_config.py  test_live_codex_task_specs.py  test_main_run_flag.py  test_patcher.py  test_pipeline.py  test_plugin_stream_contract.py  test_poc_compare.py  test_review_api_report.py  test_review_api_store.py  test_run_compare_entrypoint.py  test_run_controller_compare_entrypoint.py  test_run_pipeline.py  test_schema.py  test_verification_extensions.py  test_verifier.py  test_workspace_patching.py
web/: .env.local.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  vercel.json
(+328 files in other folders)
