[project]
name = "axiom"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agent-client-protocol>=0.9.0",
    "crosshair-tool>=0.0.102",
    "hypothesis>=6.152.1",
    "icontract>=2.7.3",
    "openai>=2.32.0",
    "pydantic>=2.13.2",
    "pytest>=9.0.3",
    "rich>=15.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
axiom-cli = "axiom.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]


