[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "correct-by-construction"
version = "0.1.0"
description = "Verification-first Codex harness with staged execution, deterministic checks, retries, and benchmark artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.28",
  "jinja2>=3.1",
  "orjson>=3.10",
  "pandas>=2.2",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "rich>=13.9",
  "typer>=0.12",
  "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]
charts = [
  "matplotlib>=3.9",
]
contree = ["contree-sdk>=0.3.0"]

[project.scripts]
cbc = "cbc.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "strict"
